2) безопасно переименовать LoginActivity в EmailPassActivityLogin Выполнено

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
         <activity android:name=".ProfileActivity" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".EmailPassActivityLogin"
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
