1) создать EmailPassActivityReg и перенести туда все, что есть в MainActivity (и java и xml) 4) В profile activity после логаута бросать на main activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".EmailPassActivityReg" />
         <activity android:name=".ProfileActivity" />
         <activity
             android:name=".EmailPassActivityLogin"
@@ -33,11 +27,18 @@
         <activity
             android:name=".Main2Activity"
             android:label="@string/title_activity_main2"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".EmailPassActivityReg"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.pelicanus.insight.MainActivity" />
+                android:value="com.pelicanus.insight.EmailPassActivityReg" />
+        </activity>
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
