--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,12 @@
 /build
 /captures
 .externalNativeBuild
+github_settings.xml
+androidEditors.xml
+androidStudioFirstRun.xml
+baseRefactoring.xml
+colors.scheme.xml
+debugger.xml
+editor.xml
+vcs.xml
+ui.lnf.xml
