--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
             android:label="@string/title_activity_navigation"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".EmailPassActivityReg" />
+        <activity android:name=".CreateTrip"/>
+        <activity android:name=".TripList"/>
     </application>
 
 </manifest>
