Сделал метод получения данных о пользователе из базы данных

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,14 +27,9 @@
             android:name=".NavigationActivity"
             android:label="@string/title_activity_navigation"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".EmailPassActivityReg"
-            android:label="@string/user_registration"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".EmailPassActivityReg" />
         <activity android:name=".CreateTrip"/>
         <activity android:name=".TripList"/>
-        <activity android:name=".MenuMainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
 
 </manifest>
