--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity android:name=".EmailPassActivityReg" />
         <activity android:name=".CreateTrip"/>
         <activity android:name=".TripList"/>
+        <activity android:name=".MenuMainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
 
 </manifest>
