Предварительный вариант личного кабинета

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,14 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ProfileActivity" />
+        <activity
+            android:name=".ProfileActivity"
+            android:label="@string/title_activity_profile"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
@@ -30,11 +34,12 @@
         <activity
             android:name=".EmailPassActivityReg"
             android:label="@string/user_registration"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".CreateTrip"/>
-        <activity android:name=".TripList"/>
-        <activity android:name=".MenuMainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".CreateTrip" />
+        <activity android:name=".TripList" />
+        <activity
+            android:name=".MenuMainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     </application>
 
 </manifest>
