Started working on excursion view page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,11 +31,13 @@
         <activity
             android:name=".EmailPassActivityReg"
             android:label="@string/user_registration"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".CreateTrip"/>
-        <activity android:name=".TripList"/>
-        <activity android:name=".MenuMainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".CreateTrip" />
+        <activity android:name=".TripList" />
+        <activity
+            android:name=".MenuMainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".ExcursionViewActivity"></activity>
     </application>
 
 </manifest>
