--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.google.firebase:firebase-auth:11.8.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
 
     compileOnly 'org.projectlombok:lombok:1.16.20'
     annotationProcessor 'org.projectlombok:lombok:1.16.20'
 }
+
 
 
 apply plugin: 'com.google.gms.google-services'
