Чертовщина какая-то

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,11 @@
         <activity
             android:name=".MenuMainActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".ExcursionViewActivity"></activity>
+        <activity android:name=".ExcursionViewActivity" />
+        <activity android:name=".TestActivity"><intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter></activity>
     </application>
 
 </manifest>
