--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.google.firebase:firebase-auth:11.8.0'
     compile 'com.google.firebase:firebase-storage:11.8.0'
+    compile 'com.github.markushi:circlebutton:1.1'
+
     implementation 'com.android.support:cardview-v7:26.1.0'
     compile 'de.hdodenhof:circleimageview:2.2.0'
 
