Big picture and collapse - finished

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,8 +38,9 @@
         <activity android:name=".TripList" />
         <activity
             android:name=".MenuMainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".ExcursionViewActivity" />
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ExcursionViewActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <activity android:name=".TestActivity"><intent-filter>
             <action android:name="android.intent.action.VIEW" />
             <category android:name="android.intent.category.LAUNCHER" />
