Просмотр записавшихся на экскурсию, только он почему-то падает при нажатии для просмотра экскурсии

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ExcursionViewActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-        <activity android:name=".TestActivity">
+        <activity android:name=".TestActivity"/>
+        <activity android:name=".VisitorsListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
