Прятанье загрузки картинки из галереи в отдельную activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -45,9 +46,10 @@
             android:name=".HowToActivity"
             android:label="How To"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ExcursionViewActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-        <activity android:name=".TestActivity"/>
+        <activity
+            android:name=".ExcursionViewActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity android:name=".TestActivity" />
         <activity android:name=".VisitorsListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -58,7 +60,8 @@
         <activity
             android:name=".EditExcursionActivity"
             android:label="@string/Edit_Excursion" />
-        <activity android:name=".EditProfileActiity"></activity>
+        <activity android:name=".EditProfileActiity" />
+        <activity android:name=".PictureSetActivity"></activity>
     </application>
 
 </manifest>
