--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.squareup:otto:1.3.8'
     implementation 'com.google.code.gson:gson:2.8.2'
+    compile 'com.github.yalantis:ucrop:2.2.1'
 }
 
 
