--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'com.squareup:otto:1.3.8'
     implementation 'com.google.code.gson:gson:2.8.2'
     compile 'com.github.yalantis:ucrop:2.2.1'
+    compile 'com.github.danylovolokh:hashtag-helper:1.1.0'
 }
 
 
