--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,7 @@
         <activity
             android:name=".EditExcursionActivity"
             android:label="@string/Edit_Excursion" />
-        <activity android:name=".EditProfileActiity" />
+        <activity android:name=".EditProfileActivity" />
         <activity android:name=".PictureSetActivity"></activity>
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
