--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,12 +61,12 @@
             android:name=".EditExcursionActivity"
             android:label="@string/Edit_Excursion" />
         <activity android:name=".EditProfileActivity" />
-        <activity android:name=".PictureSetActivity"></activity>
+        <activity android:name=".PictureSetActivity" />
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".MyExcursionsActivity"></activity>
+        <activity android:name=".MyExcursionsActivity" />
     </application>
 
 </manifest>
